@@ -1,5 +1,14 @@
 2010-11-15  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* grub-core/term/at_keyboard.c (grub_keyboard_controller_read)
+	[GRUB_MACHINE_MIPS_YEELOONG || GRUB_MACHINE_QEMU]: ifdef-ed out
+	(now unused).
+	(grub_keyboard_controller_init)
+	[GRUB_MACHINE_MIPS_YEELOONG || GRUB_MACHINE_QEMU]: Don't attempt to
+	read the initial state since controller isn't inited yet.
+
+2010-11-15  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* grub-core/lib/relocator.c (malloc_in_range): Take into account that
 	allocate_regbeg may need to create new chunk header.
 
